Update global model - functional code

--- a/code/src/global_test.ipynb
+++ b/code/src/global_test.ipynb
@@ -31,8 +31,7 @@
     "import random\n",
     "import collections\n",
     "from pyspark.sql import functions as F\n",
-    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
-    "from pyspark.sql.types import *"
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n"
    ]
   },
   {
@@ -917,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "0568d019",
    "metadata": {},
    "outputs": [
@@ -948,42 +947,196 @@
       "DataFrame shape: 3 columns, 13 rows\n",
       "\n",
       "Fitting tree on dummy DataFrame...\n",
-      "Error while fitting tree: \n",
-      "  An exception was thrown from the Python worker. Please see the stack trace below.\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Petru\\anaconda3\\envs\\bigdata_env\\Lib\\socket.py\", line 721, in readinto\n",
-      "    raise\n",
-      "TimeoutError: timed out\n",
+      "DEBUG: fit started.\n",
+      "DEBUG: _convert_to_time_series_format started.\n",
+      "DEBUG: Converting 2 feature columns to 'time_series' array.\n",
+      "DEBUG: Sample of converted DataFrame:\n",
+      "+-----------+-----------+----------+\n",
+      "|row_id     |time_series|true_label|\n",
+      "+-----------+-----------+----------+\n",
+      "|8589934592 |[1.0, 1.1] |1         |\n",
+      "|17179869184|[1.2, 1.3] |1         |\n",
+      "+-----------+-----------+----------+\n",
+      "only showing top 2 rows\n",
+      "\n",
+      "DEBUG: _convert_to_time_series_format finished.\n",
+      "DEBUG: Overall majority class calculated: 2\n",
+      "DEBUG: Initial assign_df created with 13 rows at root node 0.\n",
+      "\n",
+      "DEBUG: === Starting tree level 0 ===\n",
+      "DEBUG: Open nodes at depth 0: {0}\n",
+      "DEBUG: Filtered data for current level. Row count: 13\n",
+      "DEBUG: Sampling exemplars (driver-side).\n",
+      "DEBUG: Found 3 distinct (node_id, true_label) pairs for sampling.\n",
+      "DEBUG: Sampling exemplars for node 0, label 1.\n",
+      "DEBUG: Sampled 1 exemplars for node 0, label 1.\n",
+      "DEBUG: Sampling exemplars for node 0, label 2.\n",
+      "DEBUG: Sampled 1 exemplars for node 0, label 2.\n",
+      "DEBUG: Sampling exemplars for node 0, label 3.\n",
+      "DEBUG: Sampled 1 exemplars for node 0, label 3.\n",
+      "DEBUG: Finished sampling exemplars. Total sampled exemplars structure: {0: {1: [[1.0, 1.1]], 2: [[5.0, 5.1]], 3: [[7.8, 5.9]]}}\n",
+      "DEBUG: Evaluating splits for node 0.\n",
+      "DEBUG: Node 0 parent Gini: 0.6627218934911242\n",
+      "DEBUG: Evaluating candidate split 1 for node 0.\n",
+      "DEBUG: Candidate split 1 exemplars (labels): [1, 2, 3]\n",
+      "DEBUG: Calculating branch-label counts for candidate split 1 using RDD.\n",
+      "DEBUG: Branch label counts dictionary collected for candidate split 1: defaultdict(<class 'int'>, {(1, 1): 4, (2, 2): 5, (3, 3): 3, (2, 3): 1})\n",
+      "DEBUG: Branch counts grouped for candidate split 1: {1: [(1, 4)], 2: [(2, 5), (3, 1)], 3: [(3, 3)]}\n",
+      "DEBUG: Branch 1 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Branch 2 impurity: 0.2777777777777777, weighted: 0.12820512820512817\n",
+      "DEBUG: Branch 3 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Candidate split 1 Gini gain: 0.534516765285996\n",
+      "DEBUG: Candidate split 1 is the best so far for node 0 with gain 0.534516765285996.\n",
+      "DEBUG: Evaluating candidate split 2 for node 0.\n",
+      "DEBUG: Candidate split 2 exemplars (labels): [1, 2, 3]\n",
+      "DEBUG: Calculating branch-label counts for candidate split 2 using RDD.\n",
+      "DEBUG: Branch label counts dictionary collected for candidate split 2: defaultdict(<class 'int'>, {(1, 1): 4, (2, 2): 5, (3, 3): 3, (2, 3): 1})\n",
+      "DEBUG: Branch counts grouped for candidate split 2: {1: [(1, 4)], 2: [(2, 5), (3, 1)], 3: [(3, 3)]}\n",
+      "DEBUG: Branch 1 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Branch 2 impurity: 0.2777777777777777, weighted: 0.12820512820512817\n",
+      "DEBUG: Branch 3 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Candidate split 2 Gini gain: 0.534516765285996\n",
+      "DEBUG: Evaluating candidate split 3 for node 0.\n",
+      "DEBUG: Candidate split 3 exemplars (labels): [1, 2, 3]\n",
+      "DEBUG: Calculating branch-label counts for candidate split 3 using RDD.\n",
+      "DEBUG: Branch label counts dictionary collected for candidate split 3: defaultdict(<class 'int'>, {(1, 1): 4, (2, 2): 5, (3, 3): 3, (2, 3): 1})\n",
+      "DEBUG: Branch counts grouped for candidate split 3: {1: [(1, 4)], 2: [(2, 5), (3, 1)], 3: [(3, 3)]}\n",
+      "DEBUG: Branch 1 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Branch 2 impurity: 0.2777777777777777, weighted: 0.12820512820512817\n",
+      "DEBUG: Branch 3 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Candidate split 3 Gini gain: 0.534516765285996\n",
+      "DEBUG: Node 0 has a positive Gini gain (0.534516765285996), attempting to split.\n",
+      "DEBUG: Performing best splits and pushing rows down.\n",
+      "DEBUG: Processing best split for parent node 0.\n",
+      "DEBUG: Node 0 split_on updated: measure=euclidean, exemplars=[1, 2, 3].\n",
+      "DEBUG: Node 0 tentatively marked as INTERNAL.\n",
+      "DEBUG: Branch counts for creating children for node 0: defaultdict(<class 'int'>, {1: 4, 2: 6, 3: 3})\n",
+      "DEBUG: Creating child node 1 for branch 1 of parent 0.\n",
+      "DEBUG: Added child 1 to parent 0 children for branch 1.\n",
+      "DEBUG: Creating child node 2 for branch 2 of parent 0.\n",
+      "DEBUG: Added child 2 to parent 0 children for branch 2.\n",
+      "DEBUG: Creating child node 3 for branch 3 of parent 0.\n",
+      "DEBUG: Added child 3 to parent 0 children for branch 3.\n",
+      "DEBUG: Applying single UDF to push rows down.\n",
+      "DEBUG: assign_df updated for depth 1. Total rows: 13\n",
+      "DEBUG: open_nodes for next level: {1, 2, 3}\n",
+      "\n",
+      "DEBUG: === Starting tree level 1 ===\n",
+      "DEBUG: Open nodes at depth 1: {1, 2, 3}\n",
+      "DEBUG: Filtered data for current level. Row count: 13\n",
+      "DEBUG: Sampling exemplars (driver-side).\n",
+      "DEBUG: Found 4 distinct (node_id, true_label) pairs for sampling.\n",
+      "DEBUG: Sampling exemplars for node 1, label 1.\n",
+      "DEBUG: Sampled 1 exemplars for node 1, label 1.\n",
+      "DEBUG: Sampling exemplars for node 2, label 2.\n",
+      "DEBUG: Sampled 1 exemplars for node 2, label 2.\n",
+      "DEBUG: Sampling exemplars for node 3, label 3.\n",
+      "DEBUG: Sampled 1 exemplars for node 3, label 3.\n",
+      "DEBUG: Sampling exemplars for node 2, label 3.\n",
+      "DEBUG: Sampled 1 exemplars for node 2, label 3.\n",
+      "DEBUG: Finished sampling exemplars. Total sampled exemplars structure: {1: {1: [[1.0, 1.1]]}, 2: {2: [[5.0, 5.1]], 3: [[5.8, 5.9]]}, 3: {3: [[7.8, 5.9]]}}\n",
+      "DEBUG: Evaluating splits for node 1.\n",
+      "DEBUG: Node 1 parent Gini: 0.0\n",
+      "DEBUG: Evaluating candidate split 1 for node 1.\n",
+      "DEBUG: Candidate split 1 for node 1 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Evaluating candidate split 2 for node 1.\n",
+      "DEBUG: Candidate split 2 for node 1 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Evaluating candidate split 3 for node 1.\n",
+      "DEBUG: Candidate split 3 for node 1 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Node 1 has non-positive Gini gain (-1.0), making it a leaf.\n",
+      "DEBUG: Evaluating splits for node 2.\n",
+      "DEBUG: Node 2 parent Gini: 0.2777777777777777\n",
+      "DEBUG: Evaluating candidate split 1 for node 2.\n",
+      "DEBUG: Candidate split 1 exemplars (labels): [2, 3]\n",
+      "DEBUG: Calculating branch-label counts for candidate split 1 using RDD.\n",
+      "DEBUG: Branch label counts dictionary collected for candidate split 1: defaultdict(<class 'int'>, {(2, 2): 5, (3, 3): 1})\n",
+      "DEBUG: Branch counts grouped for candidate split 1: {2: [(2, 5)], 3: [(3, 1)]}\n",
+      "DEBUG: Branch 2 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Branch 3 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Candidate split 1 Gini gain: 0.2777777777777777\n",
+      "DEBUG: Candidate split 1 is the best so far for node 2 with gain 0.2777777777777777.\n",
+      "DEBUG: Evaluating candidate split 2 for node 2.\n",
+      "DEBUG: Candidate split 2 exemplars (labels): [2, 3]\n",
+      "DEBUG: Calculating branch-label counts for candidate split 2 using RDD.\n",
+      "DEBUG: Branch label counts dictionary collected for candidate split 2: defaultdict(<class 'int'>, {(2, 2): 5, (3, 3): 1})\n",
+      "DEBUG: Branch counts grouped for candidate split 2: {2: [(2, 5)], 3: [(3, 1)]}\n",
+      "DEBUG: Branch 2 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Branch 3 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Candidate split 2 Gini gain: 0.2777777777777777\n",
+      "DEBUG: Evaluating candidate split 3 for node 2.\n",
+      "DEBUG: Candidate split 3 exemplars (labels): [2, 3]\n",
+      "DEBUG: Calculating branch-label counts for candidate split 3 using RDD.\n",
+      "DEBUG: Branch label counts dictionary collected for candidate split 3: defaultdict(<class 'int'>, {(2, 2): 5, (3, 3): 1})\n",
+      "DEBUG: Branch counts grouped for candidate split 3: {2: [(2, 5)], 3: [(3, 1)]}\n",
+      "DEBUG: Branch 2 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Branch 3 impurity: 0.0, weighted: 0.0\n",
+      "DEBUG: Candidate split 3 Gini gain: 0.2777777777777777\n",
+      "DEBUG: Node 2 has a positive Gini gain (0.2777777777777777), attempting to split.\n",
+      "DEBUG: Evaluating splits for node 3.\n",
+      "DEBUG: Node 3 parent Gini: 0.0\n",
+      "DEBUG: Evaluating candidate split 1 for node 3.\n",
+      "DEBUG: Candidate split 1 for node 3 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Evaluating candidate split 2 for node 3.\n",
+      "DEBUG: Candidate split 2 for node 3 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Evaluating candidate split 3 for node 3.\n",
+      "DEBUG: Candidate split 3 for node 3 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Node 3 has non-positive Gini gain (-1.0), making it a leaf.\n",
+      "DEBUG: Finalizing node 1 as a leaf.\n",
+      "DEBUG: Node 1 marked as leaf with prediction 1.\n",
+      "DEBUG: Finalizing node 3 as a leaf.\n",
+      "DEBUG: Node 3 marked as leaf with prediction 3.\n",
+      "DEBUG: Performing best splits and pushing rows down.\n",
+      "DEBUG: Processing best split for parent node 2.\n",
+      "DEBUG: Node 2 split_on updated: measure=euclidean, exemplars=[2, 3].\n",
+      "DEBUG: Node 2 tentatively marked as INTERNAL.\n",
+      "DEBUG: Branch counts for creating children for node 2: defaultdict(<class 'int'>, {2: 5, 3: 1})\n",
+      "DEBUG: Creating child node 4 for branch 2 of parent 2.\n",
+      "DEBUG: Added child 4 to parent 2 children for branch 2.\n",
+      "DEBUG: Branch 3 for node 2 has 1 samples, below min_samples. Not creating child node.\n",
+      "DEBUG: Applying single UDF to push rows down.\n",
+      "DEBUG: assign_df updated for depth 2. Total rows: 13\n",
+      "DEBUG: open_nodes for next level: {4}\n",
+      "\n",
+      "DEBUG: === Starting tree level 2 ===\n",
+      "DEBUG: Open nodes at depth 2: {4}\n",
+      "DEBUG: Filtered data for current level. Row count: 5\n",
+      "DEBUG: Sampling exemplars (driver-side).\n",
+      "DEBUG: Found 1 distinct (node_id, true_label) pairs for sampling.\n",
+      "DEBUG: Sampling exemplars for node 4, label 2.\n",
+      "DEBUG: Sampled 1 exemplars for node 4, label 2.\n",
+      "DEBUG: Finished sampling exemplars. Total sampled exemplars structure: {4: {2: [[5.0, 5.1]]}}\n",
+      "DEBUG: Evaluating splits for node 4.\n",
+      "DEBUG: Node 4 parent Gini: 0.0\n",
+      "DEBUG: Evaluating candidate split 1 for node 4.\n",
+      "DEBUG: Candidate split 1 for node 4 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Evaluating candidate split 2 for node 4.\n",
+      "DEBUG: Candidate split 2 for node 4 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Evaluating candidate split 3 for node 4.\n",
+      "DEBUG: Candidate split 3 for node 4 has less than 2 exemplars, skipping.\n",
+      "DEBUG: Node 4 has non-positive Gini gain (-1.0), making it a leaf.\n",
+      "DEBUG: Finalizing node 4 as a leaf.\n",
+      "DEBUG: Node 4 marked as leaf with prediction 2.\n",
+      "DEBUG: No nodes split in this iteration. assign_df remains unchanged.\n",
+      "DEBUG: open_nodes for next level: set()\n",
+      "DEBUG: fit finished.\n",
+      "\n",
+      "Tree structure:\n",
+      "DEBUG: print_tree started.\n",
+      "DEBUG: print_tree finished.\n",
+      "Node 0 (Depth 0, Parent: None): INTERNAL, prediction=None, split_on=[measure=euclidean, exemplars={1: [1.0, 1.1], 2: [5.0, 5.1], 3: [7.8, 5.9]}]\n",
+      "  Children:\n",
+      "    Branch 1 -> Child 1\n",
+      "  Node 1 (Depth 1, Parent: 0): LEAF, prediction=1, split_on=[None]\n",
+      "    Branch 2 -> Child 2\n",
+      "  Node 2 (Depth 1, Parent: 0): INTERNAL, prediction=None, split_on=[measure=euclidean, exemplars={2: [5.0, 5.1], 3: [5.8, 5.9]}]\n",
+      "    Children:\n",
+      "      Branch 2 -> Child 4\n",
+      "    Node 4 (Depth 2, Parent: 2): LEAF, prediction=2, split_on=[None]\n",
+      "    Branch 3 -> Child 3\n",
+      "  Node 3 (Depth 1, Parent: 0): LEAF, prediction=3, split_on=[None]\n",
       "\n",
       "\n",
       "Tree fitting complete!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Petru\\AppData\\Local\\Temp\\ipykernel_23640\\1699502173.py\", line 75, in <module>\n",
-      "    tree.fit(dummy_train_df)\n",
-      "  File \"C:\\Users\\Petru\\AppData\\Local\\Temp\\ipykernel_23640\\3617201036.py\", line 297, in fit\n",
-      "    if current_level_df.count() == 0:\n",
-      "       ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Petru\\anaconda3\\envs\\bigdata_env\\Lib\\site-packages\\pyspark\\sql\\dataframe.py\", line 1240, in count\n",
-      "    return int(self._jdf.count())\n",
-      "               ^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Petru\\anaconda3\\envs\\bigdata_env\\Lib\\site-packages\\py4j\\java_gateway.py\", line 1322, in __call__\n",
-      "    return_value = get_return_value(\n",
-      "                   ^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Petru\\anaconda3\\envs\\bigdata_env\\Lib\\site-packages\\pyspark\\errors\\exceptions\\captured.py\", line 185, in deco\n",
-      "    raise converted from None\n",
-      "pyspark.errors.exceptions.captured.PythonException: \n",
-      "  An exception was thrown from the Python worker. Please see the stack trace below.\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Petru\\anaconda3\\envs\\bigdata_env\\Lib\\socket.py\", line 721, in readinto\n",
-      "    raise\n",
-      "TimeoutError: timed out\n",
-      "\n"
      ]
     }
    ],
@@ -1074,17 +1227,6 @@
     "    traceback.print_exc()\n",
     "\n",
     "print(\"\\nTree fitting complete!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39055d0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"\\nFitting tree on dummy DataFrame...\")\n",
-    "tree.fit(dummy_train_df)\n"
    ]
   },
   {
