Use our dataset - global model

--- a/code/src/global_test.ipynb
+++ b/code/src/global_test.ipynb
@@ -916,7 +916,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "9ad30460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    \"databricks_data_path\": \"/mnt/2025-team6/fulldataset_ECG5000.csv\",\n",
+    "    \"local_data_path\": \"/fulldataset_ECG5000.csv\",\n",
+    "    \"label_col\": \"label\",\n",
+    "    \"data_percentage\": 1.0,\n",
+    "    \"min_number_iterarations\": 2,\n",
+    "\n",
+    "    \"local_model_config\": {\n",
+    "        \"test_local_model\" : True,\n",
+    "        \"num_partitions\": 10,  \n",
+    "        \"tree_params\": {\n",
+    "            \"n_splitters\": 5,  # Matches ProximityTree default\n",
+    "            \"max_depth\": None,  \n",
+    "            \"min_samples_split\": 5,  # From ProximityTree default\n",
+    "            \"random_state\": 123\n",
+    "            },\n",
+    "        \"forest_params\": {\n",
+    "            \"random_state\": 123,\n",
+    "            \"n_jobs\": -1  # Use all available cores\n",
+    "            }\n",
+    "    },\n",
+    "    \"global_model_config\": {\n",
+    "        \"test_local_model\" : False,\n",
+    "        \"num_partitions\": 10\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ingestion_config = {\n",
+    "                \"data_path\":r\"D:\\repos\\BigData-main\\BigData-1\\fulldataset_ECG5000.csv\",\n",
+    "                \"data_percentage\": config.get(\"data_percentage\", 0.5)\n",
+    "}\n",
+    "ingestion = DataIngestion(spark=spark, config=ingestion_config)\n",
+    "preprocessor = Preprocessor(config=config)\n",
+    "# load + preprocess data\n",
+    "df = ingestion.load_data()\n",
+    "df = preprocessor.run_preprocessing(df)\n",
+    "train_df, test_df = randomSplit_stratified_via_sampleBy(df, label_col = \"label\", weights=[0.8, 0.2], seed=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0568d019",
    "metadata": {},
    "outputs": [
@@ -1169,37 +1215,37 @@
     "\n",
     "# --- Create a small, dummy DataFrame for testing ---\n",
     "# This data simulates time series with 2 features and 2 classes (1 and 2)\n",
-    "# Designed to potentially create a simple split at the root\n",
-    "dummy_data = [\n",
-    "    (1.0, 1.1, 1), # Class 1\n",
-    "    (1.2, 1.3, 1), # Class 1\n",
-    "    (0.8, 0.9, 1), # Class 1\n",
-    "    (5.0, 5.1, 2), # Class 2\n",
-    "    (5.2, 5.3, 2), # Class 2\n",
-    "    (4.8, 4.9, 2), # Class 2\n",
-    "    (2.5, 2.6, 1), # Class 1 (closer to Class 1 exemplars)\n",
-    "    (3.5, 3.6, 2), # Class 2 (closer to Class 2 exemplars)\n",
-    "    (4.8, 4.9, 2), # Class 2\n",
-    "    (7.8, 5.9, 3), # Class 3\n",
-    "    (6.8, 5.9, 3), # Class 3\n",
-    "    (7.8, 5.9, 3), # Class 3\n",
-    "    (5.8, 5.9, 3), # Class 3\n",
-    "]\n",
+    "# # Designed to potentially create a simple split at the root\n",
+    "# dummy_data = [\n",
+    "#     (1.0, 1.1, 1), # Class 1\n",
+    "#     (1.2, 1.3, 1), # Class 1\n",
+    "#     (0.8, 0.9, 1), # Class 1\n",
+    "#     (5.0, 5.1, 2), # Class 2\n",
+    "#     (5.2, 5.3, 2), # Class 2\n",
+    "#     (4.8, 4.9, 2), # Class 2\n",
+    "#     (2.5, 2.6, 1), # Class 1 (closer to Class 1 exemplars)\n",
+    "#     (3.5, 3.6, 2), # Class 2 (closer to Class 2 exemplars)\n",
+    "#     (4.8, 4.9, 2), # Class 2\n",
+    "#     (7.8, 5.9, 3), # Class 3\n",
+    "#     (6.8, 5.9, 3), # Class 3\n",
+    "#     (7.8, 5.9, 3), # Class 3\n",
+    "#     (5.8, 5.9, 3), # Class 3\n",
+    "# ]\n",
     "\n",
-    "# Define schema for the dummy data\n",
-    "dummy_schema = StructType([\n",
-    "    StructField(\"feature1\", DoubleType(), True),\n",
-    "    StructField(\"feature2\", DoubleType(), True),\n",
-    "    StructField(\"label\", IntegerType(), True)\n",
-    "])\n",
+    "# # Define schema for the dummy data\n",
+    "# dummy_schema = StructType([\n",
+    "#     StructField(\"feature1\", DoubleType(), True),\n",
+    "#     StructField(\"feature2\", DoubleType(), True),\n",
+    "#     StructField(\"label\", IntegerType(), True)\n",
+    "# ])\n",
     "\n",
-    "# Create the dummy DataFrame\n",
-    "# This is where the error occurred previously\n",
-    "dummy_train_df = spark.createDataFrame(dummy_data, dummy_schema)\n",
+    "# # Create the dummy DataFrame\n",
+    "# # This is where the error occurred previously\n",
+    "# dummy_train_df = spark.createDataFrame(dummy_data, dummy_schema)\n",
     "\n",
-    "print(\"Dummy Training DataFrame:\")\n",
-    "dummy_train_df.show()\n",
-    "print(f\"DataFrame shape: {len(dummy_train_df.columns)} columns, {dummy_train_df.count()} rows\")\n",
+    "# print(\"Dummy Training DataFrame:\")\n",
+    "# dummy_train_df.show()\n",
+    "print(f\"DataFrame shape: {len(train_df.columns)} columns, {train_df.count()} rows\")\n",
     "\n",
     "\n",
     "# --- Test the GlobalProxTree class ---\n",
@@ -1208,14 +1254,14 @@
     "# Using small max_depth and min_samples for a shallow tree\n",
     "# num_candidate_splits=3 to see evaluation process\n",
     "# num_exemplars_per_class=1 as in the paper's conceptual split\n",
-    "tree = GlobalProxTree(spark, max_depth=3, min_samples=2, num_candidate_splits=3, num_exemplars_per_class=1)\n",
+    "tree = GlobalProxTree(spark, max_depth=3, min_samples=5, num_candidate_splits=3, num_exemplars_per_class=1)\n",
     "\n",
     "\n",
     "# Now we can directly fit the tree on the wide DataFrame\n",
     "# The conversion will happen automatically inside the fit method\n",
     "try:\n",
     "    print(\"\\nFitting tree on dummy DataFrame...\")\n",
-    "    tree.fit(dummy_train_df)\n",
+    "    tree.fit(train_df)\n",
     "\n",
     "    print(\"\\nTree structure:\")\n",
     "    # Use the corrected print_tree method to see the full structure\n",
@@ -1231,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7c5820de",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1295,7 @@
       "|row_id     |time_series|true_label|\n",
       "+-----------+-----------+----------+\n",
       "|8589934592 |[1.1, 1.2] |1         |\n",
-      "|25769803776|[0.1, 1.5] |1         |\n",
+      "|17179869184|[0.1, 1.5] |1         |\n",
       "+-----------+-----------+----------+\n",
       "only showing top 2 rows\n",
       "\n",
@@ -1259,7 +1305,7 @@
       "DEBUG: Plain tree structure unbroadcasted.\n",
       "DEBUG: predict finished.\n",
       "\n",
-      "Sample Predictions vs. True Labels:\n",
+      " True Labels vs Sample Predictions:\n",
       "+-----+----------+\n",
       "|label|prediction|\n",
       "+-----+----------+\n",
@@ -1271,32 +1317,36 @@
       "|  1.0|       2.0|\n",
       "|  2.0|       2.0|\n",
       "|  3.0|       3.0|\n",
+      "|  3.0|       3.0|\n",
       "|  2.0|       3.0|\n",
       "+-----+----------+\n",
+      "only showing top 10 rows\n",
       "\n",
-      "Prediction Accuracy = 0.556\n"
+      "Prediction Accuracy = 0.545\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# Example Prediction (uncomment and run after successful fitting)\n",
-    "dummy_test_data = [\n",
-    "    (1.1, 1.2, 1), # Should predict 1\n",
-    "    (0.1, 1.5, 1), # Should predict 1\n",
-    "    (1.9, 1.5, 2), # Should predict 1\n",
-    "    (1.0, 1.6, 2), # Should predict 1\n",
-    "    (5.3, 5.4, 2), # Closer to class 2 exemplars\n",
-    "    (3.0, 3.1, 1), # Closer to class 2 exemplars\n",
-    "    (4.0, 4.1, 2), # Closer to class 2 exemplars\n",
-    "    (7.8, 5.9, 3), # shoudl predict class 3\n",
-    "    (8.8, 5.9, 2), # shoudl predict class 3\n",
-    "]\n",
-    "dummy_test_df = spark.createDataFrame(dummy_test_data, dummy_schema)\n",
+    "# # Example Prediction (uncomment and run after successful fitting)\n",
+    "# dummy_test_data = [\n",
+    "#     (1.1, 1.2, 1), # Should predict 1\n",
+    "#     (0.1, 1.5, 1), # Should predict 1\n",
+    "#     (1.9, 1.5, 2), # Should predict 1\n",
+    "#     (1.0, 1.6, 2), # Should predict 1\n",
+    "#     (5.3, 5.4, 2), # Closer to class 2 exemplars\n",
+    "#     (3.0, 3.1, 1), # Closer to class 2 exemplars\n",
+    "#     (4.0, 4.1, 2), # Closer to class 2 exemplars\n",
+    "#     (7.8, 5.9, 3), # shoudl predict class 3\n",
+    "#     (7.8, 5.9, 3), # shoudl predict class 3\n",
+    "#     (8.8, 5.9, 2), # shoudl predict class 3\n",
+    "#     (0.8, 0.9, 3), # shoudl predict class 1\n",
+    "# ]\n",
+    "# dummy_test_df = spark.createDataFrame(dummy_test_data, dummy_schema)\n",
     "\n",
     "print(\"\\nTesting Prediction...\")\n",
     "try:\n",
-    "    pred_df = tree.predict(dummy_test_df)\n",
+    "    pred_df = tree.predict(test_df)\n",
     "\n",
     "    # Rename true_label to label for evaluator compatibility\n",
     "    pred_df = pred_df.withColumnRenamed(\"true_label\", \"label\")\n",
@@ -1308,7 +1358,7 @@
     "        .withColumn(\"label\",      F.col(\"label\")      .cast(DoubleType()))\n",
     "    )\n",
     "\n",
-    "    print(\"\\nSample Predictions vs. True Labels:\")\n",
+    "    print(\"\\n True Labels vs Sample Predictions:\")\n",
     "    pred_df.select(\"label\", \"prediction\").show(10)\n",
     "\n",
     "    # Evaluate accuracy\n",
