--- a/code/src/main.ipynb
+++ b/code/src/main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# We all contributed equally to the design, code and report writing "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
